Front fully implemented.

--- a/src/main/resources/static/src/pacientes/pacientes.html
+++ b/src/main/resources/static/src/pacientes/pacientes.html
@@ -10,7 +10,7 @@
 </head>
 <body class="bg-gray-100">
     <header class="bg-pale-blue text-slate-gray text-center p-4">
-        <h1 class="text-3xl font-palanquin">Pacientes</h1>
+        <h1 class="text-3xl font-palanquin">Lista de Pacientes</h1>
     </header>
     <main class="bg-cover bg-no-repeat bg-center bg-hero h-screen flex items-start">
         <section class="container mx-auto mt-10">
