--- a/src/main/resources/static/src/index.html
+++ b/src/main/resources/static/src/index.html
@@ -12,21 +12,17 @@
         <h1 class="text-3xl font-palanquin">Clínica Odontológica</h1>
     </header>
     <main class="bg-cover bg-no-repeat bg-center bg-hero h-screen flex items-center">
-
         <section class="container mx-auto h-64 w-6/12 rounded-lg bg-slate-gray opacity-85 flex items-center justify-around">
-            <div id="odt-main" class="flex justify-center items-center w-1/3 bg-pale-blue p-6 rounded-lg shadow-3xl">
-                <h2 class="text-xl text-slate-gray font-montserrat m-4">Odontólogos Disponibles</h2>
+            <div id="odt-main" class="flex justify-center items-center w-1/3 bg-pale-blue p-6 rounded-lg shadow-3xl cursor-pointer">
+                <h2 class="text-xl text-slate-gray font-montserrat m-4">Odontólogos</h2>
             </div>
-
-            <div id="tur-main" class="flex justify-center items-center w-1/3 bg-pale-blue p-6 rounded-lg shadow-3xl">
-                <h2 class="text-xl text-slate-gray font-montserrat m-4">Sacar Turno</h2>
+            <div id="tur-main" class="flex justify-center items-center w-1/3 bg-pale-blue p-6 rounded-lg shadow-3xl cursor-pointer">
+                <h2 class="text-xl text-slate-gray font-montserrat m-4">Turnos</h2>
             </div>
-
-            <div class="absolute top-4 right-4">
-                <a href="./pacientes/pacientes.html" class="bg-slate-gray text-white-400 font-montserrat px-4 py-2 rounded">Pacientes</a>
+            <div id="pacientes-main" class="absolute top-4 right-4 bg-slate-gray text-white-400 font-montserrat px-4 py-2 rounded cursor-pointer">
+                Pacientes
             </div>
         </section>
-
     </main>
 </body>
 </html>
