--- a/src/main/resources/static/src/odontologos/odontologos.form.html
+++ b/src/main/resources/static/src/odontologos/odontologos.form.html
@@ -15,7 +15,7 @@
         <section class="bg-white p-6 rounded-lg shadow-3xl w-6/12">
             <div class="border-b border-gray-900/10 pb-12">
                 <h2 class="text-xl font-montserrat text-slate-gray mb-4">Odontólogos</h2>
-                <p class="mt-1 text-sm leading-6 text-gray-600">Ingrese sus datos por favor</p>
+                <p class="mt-1 text-sm leading-6 text-gray-600">Ingrese los datos del odontologo por favor</p>
                 <form id="odontologo-form">
                     <input type="hidden" id="odontologo-id">
                     <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
