--- a/src/main/resources/static/src/pacientes/pacientes.form.html
+++ b/src/main/resources/static/src/pacientes/pacientes.form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Pacientes</title>
+    <title>Pacientes</title>
     <link href="../output.css" rel="stylesheet">
     <script type="module" src="editarPaciente.js"></script>
 </head>
@@ -18,33 +18,63 @@
                 <p class="mt-1 text-sm leading-6 text-gray-600">Ingrese los datos del paciente por favor</p>
                 <form id="paciente-form">
                     <input type="hidden" id="paciente-id">
+                    <input type="hidden" id="domicilio-id">
                     <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
                         <div class="sm:col-span-3">
                             <label for="first-name" class="block text-sm font-medium leading-6 text-gray-900">Nombre</label>
                             <div class="mt-2">
-                                <input type="text" name="first-name" id="first-name" autocomplete="given-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                                <input type="text" name="first-name" id="first-name" autocomplete="given-name" class="block w-full rounded-md border-0 py-1.5 pl-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                             </div>
                         </div>
                         <div class="sm:col-span-3">
                             <label for="last-name" class="block text-sm font-medium leading-6 text-gray-900">Apellido</label>
                             <div class="mt-2">
-                                <input type="text" name="last-name" id="last-name" autocomplete="family-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                                <input type="text" name="last-name" id="last-name" autocomplete="family-name" class="block w-full rounded-md border-0 py-1.5 pl-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                             </div>
                         </div>
                         <div class="sm:col-span-6">
                             <label for="dni" class="block text-sm font-medium leading-6 text-gray-900">DNI</label>
                             <div class="mt-2">
-                                <input id="dni" name="dni" type="text" autocomplete="dni" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                                <input id="dni" name="dni" type="text" autocomplete="dni" class="block w-full rounded-md border-0 py-1.5 pl-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                             </div>
                         </div>
                         <div class="sm:col-span-6">
-                            <label for="fecha-ingreso" class="block text-sm font-medium leading-6 text-gray-900">Fecha de Nacimiento</label>
+                            <label for="fecha-ingreso" class="block text-sm font-medium leading-6 text-gray-900">Fecha de Ingreso</label>
                             <div class="mt-2">
-                                <input type="text" name="fecha-ingreso" id="fecha-ingreso" autocomplete="bday" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                                <input type="text" name="fecha-ingreso" id="fecha-ingreso" autocomplete="bday" class="block w-full rounded-md border-0 py-1.5 pl-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="bg-slate-gray text-white px-4 py-2 rounded mt-2" id="savePacienteBtn">Guardar</button>
+                    <fieldset class="mt-6 border border-gray-300 p-4 rounded-md">
+                        <legend class="text-lg font-medium text-gray-900">Domicilio</legend>
+                        <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+                            <div class="sm:col-span-3">
+                                <label for="calle" class="block text-sm font-medium leading-6 text-gray-900">Calle</label>
+                                <div class="mt-2">
+                                    <input type="text" name="calle" id="calle" autocomplete="address-line1" class="block w-full rounded-md border-0 py-1.5 pl-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                                </div>
+                            </div>
+                            <div class="sm:col-span-3">
+                                <label for="numero" class="block text-sm font-medium leading-6 text-gray-900">Número</label>
+                                <div class="mt-2">
+                                    <input type="text" name="numero" id="numero" autocomplete="address-line2" class="block w-full rounded-md border-0 py-1.5 pl-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                                </div>
+                            </div>
+                            <div class="sm:col-span-3">
+                                <label for="localidad" class="block text-sm font-medium leading-6 text-gray-900">Localidad</label>
+                                <div class="mt-2">
+                                    <input type="text" name="localidad" id="localidad" autocomplete="address-level2" class="block w-full rounded-md border-0 py-1.5 pl-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                                </div>
+                            </div>
+                            <div class="sm:col-span-3">
+                                <label for="provincia" class="block text-sm font-medium leading-6 text-gray-900">Provincia</label>
+                                <div class="mt-2">
+                                    <input type="text" name="provincia" id="provincia" autocomplete="address-level1" class="block w-full rounded-md border-0 py-1.5 pl-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                                </div>
+                            </div>
+                        </div>
+                    </fieldset>
+                    <button type="submit" class="bg-slate-gray text-white px-4 py-2 rounded mt-6" id="savePacienteBtn">Guardar</button>
                 </form>
             </div>
         </section>
