--- a/src/main/resources/static/src/turnos/agregarTurno.html
+++ b/src/main/resources/static/src/turnos/agregarTurno.html
@@ -48,7 +48,7 @@
 
                     <!-- Botón Guardar -->
                     <div class="flex justify-end mt-6">
-                        <button type="button" id="saveTurnoBtn" class="inline-flex items-center px-4 py-2 bg-blue-800 border border-transparent rounded-md font-semibold text-black hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                        <button type="button" id="saveTurnoBtn" class="inline-flex items-center px-4 py-2 bg-slate-gray border border-transparent rounded-md font-semibold text-white hover:text-black hover:bg-slate-gray focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                             Guardar
                         </button>
                     </div>
