--- a/src/main/resources/static/src/odontologos/odontologos.html
+++ b/src/main/resources/static/src/odontologos/odontologos.html
@@ -12,29 +12,27 @@
     <header class="bg-pale-blue text-slate-gray text-center p-4">
         <h1 class="text-3xl font-palanquin">Lista de Odontólogos</h1>
     </header>
-    <main class="bg-cover bg-no-repeat bg-center bg-hero h-screen flex">
-        <section class="container mx-auto mt-10 self-center flex justify-center">
-            <section class="bg-white w-8/12 p-6 rounded-lg shadow-3xl">
-                <h2 class="text-xl font-montserrat text-slate-gray mb-4">Odontólogos</h2>
-                <div class="flex justify-center items-center overflow-x-auto">
-                    <table class="w-6/12 bg-white border">
-                        <thead>
-                            <tr class="bg-slate-gray text-white uppercase text-sm leading-normal">
-                                <th class="py-3 px-20 text-center">Nombre</th>
-                                <th class="py-3 px-20 text-center">Apellido</th>
-                                <th class="py-3 px-20 text-center">Número de Matrícula</th>
-                                <th class="py-3 px-20 text-center">Acciones</th>
-                            </tr>
-                        </thead>
-                        <tbody id="odontologos-list" class="text-gray-600 text-sm font-light">
-                            <!-- Aquí se mostrarán los odontólogos -->
-                        </tbody>
-                    </table>
-                </div>
-                <div class="flex justify-end mt-4">
-                    <button id="odtCreateBtn" class="bg-slate-gray text-white px-4 py-2 rounded">Añadir Odontólogo</button>
-                </div>
-            </section>
+    <main class="container mx-auto mt-10">
+        <section class="bg-white p-6 rounded-lg shadow-3xl">
+            <h2 class="text-xl font-montserrat text-slate-gray mb-4">Odontólogos</h2>
+            <div class="overflow-x-auto">
+                <table class="min-w-full bg-white border border-gray-200">
+                    <thead>
+                        <tr class="bg-gray-200 text-gray-600 uppercase text-sm leading-normal">
+                            <th class="py-3 px-20 text-center">Nombre</th>
+                            <th class="py-3 px-20 text-center">Apellido</th>
+                            <th class="py-3 px-20 text-center">Número de Matrícula</th>
+                            <th class="py-3 px-20 text-center">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody id="odontologos-list" class="text-gray-600 text-sm font-light">
+                        <!-- Aquí se mostrarán los odontólogos -->
+                    </tbody>
+                </table>
+            </div>
+            <div class="flex justify-end mt-4">
+                <button id="odtCreateBtn" class="bg-slate-gray text-white px-4 py-2 rounded">Añadir Odontólogo</button>
+            </div>
         </section>
     </main>
 </body>
